# bakachon

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
bakachon/: main.py
bakachon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/: cleaner.rb
